# RoboCutter

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: health.py  system.py
backend/app/core/: config.py  logging.py
backend/app/database/: connection.py
backend/app/services/: base_service.py
desktop/: launcher.py
